@@ -285,6 +285,7 @@ foreach(ROUTINE ${LEVELX_ROUTINES})
   set(HEADERS ${HEADERS} src/routines/levelx/${ROUTINE}.hpp)
 endforeach()
 foreach(DATABASE ${DATABASES})
+  set(SOURCES ${SOURCES} src/database/kernels/${DATABASE}/${DATABASE}.cpp)
   set(HEADERS ${HEADERS} src/database/kernels/${DATABASE}/${DATABASE}.hpp)
   set(HEADERS ${HEADERS} src/database/kernels/${DATABASE}/${DATABASE}_16.hpp)
   set(HEADERS ${HEADERS} src/database/kernels/${DATABASE}/${DATABASE}_32.hpp)
