@@ -7,16 +7,9 @@
 //
 // =================================================================================================
 
-#include "database/database_structure.hpp"
-
-namespace clblast {
-namespace database {
-
-extern const DatabaseEntry XgemmDirectHalf;
-extern const DatabaseEntry XgemmDirectSingle;
-extern const DatabaseEntry XgemmDirectComplexSingle;
-extern const DatabaseEntry XgemmDirectDouble;
-extern const DatabaseEntry XgemmDirectComplexDouble;
-
-} // namespace database
-} // namespace clblast
+#include "database/kernels/xgemm_direct/xgemm_direct.hpp"
+#include "database/kernels/xgemm_direct/xgemm_direct_16.hpp"
+#include "database/kernels/xgemm_direct/xgemm_direct_32.hpp"
+#include "database/kernels/xgemm_direct/xgemm_direct_3232.hpp"
+#include "database/kernels/xgemm_direct/xgemm_direct_64.hpp"
+#include "database/kernels/xgemm_direct/xgemm_direct_6464.hpp"
